--- a/src/classes/PerformOpportunityActionBatchTest.cls
+++ b/src/classes/PerformOpportunityActionBatchTest.cls
@@ -1,14 +1,13 @@
 @isTest
 public class PerformOpportunityActionBatchTest {
 	
-	public static Final String RECORD_TYPE_CONTACT = 'Contact';
-	
     static testMethod void PerformOpportunityActionBatch() {
+    	Contacts.fireTrigger = false;
     	Opportunity opp = TestDataFactory.createOpp('Test');
     	insert opp;
     	Account accountRec = TestDataFactory.createAccount();
 		insert accountRec;
-		Cadence__c seqRec = TestDataFactory.createCadence(RECORD_TYPE_CONTACT);
+		Cadence__c seqRec = TestDataFactory.createCadence(CadenceConstants.CONTACT_OBJECT_NAME);
 		insert seqRec;
 		Contact contRec = TestDataFactory.createContact(accountRec.Id, seqRec.Id);
 		insert contRec;
